--- a/02_code/android/eOrderMobile/res/layout-xxhdpi/order_activity.xml
+++ b/02_code/android/eOrderMobile/res/layout-xxhdpi/order_activity.xml
@@ -172,7 +172,7 @@
 
             <TextView
                 android:id="@+id/original_price"
-                android:layout_width="120dp"
+                android:layout_width="wrap_content"
                 android:layout_height="43dp"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="24dp"
