--- a/02_code/android/eOrderMobile/res/layout-xhdpi/order_activity.xml
+++ b/02_code/android/eOrderMobile/res/layout-xhdpi/order_activity.xml
@@ -60,12 +60,46 @@
                 android:singleLine="true"
                 android:textSize="18dp" />
         </RelativeLayout>
-
+        
         <RelativeLayout
             android:id="@+id/layout_03"
             android:layout_width="fill_parent"
             android:layout_height="43dp"
             android:layout_below="@id/layout_02"
+            android:background="#ededed"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/table_people_count"
+                android:layout_width="70dp"
+                android:layout_height="43dp"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:background="#ededed"
+                android:gravity="left|center_vertical"
+                android:text="@string/order_text_title_table_people_count"
+                android:textColor="#4d4d4d"
+                android:textSize="20dp" />
+			
+            <EditText
+                android:id="@+id/table_input_people_count"
+                android:layout_width="140dp"
+                android:layout_height="43dp"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@id/table_people_count"
+                android:hint="@string/order_text_hint_poeple_count"
+                android:inputType="number"
+                android:maxLength="20"
+                android:singleLine="true"
+                android:textSize="18dp" />			
+        </RelativeLayout>
+        
+        <RelativeLayout
+            android:id="@+id/layout_04"
+            android:layout_width="fill_parent"
+            android:layout_height="43dp"
+            android:layout_below="@id/layout_03"
             android:background="#ededed"
             android:orientation="horizontal" >
 
@@ -92,8 +126,9 @@
                 android:inputType="number"
                 android:maxLength="20"
                 android:singleLine="true"
+                android:enabled="false"
                 android:textSize="18dp" />
-
+				
             <Button
                 android:id="@+id/employee_2code_id"
                 android:layout_width="121dp"
@@ -105,10 +140,10 @@
         </RelativeLayout>
 
         <RelativeLayout
-            android:id="@+id/layout_04"
+            android:id="@+id/layout_05"
             android:layout_width="fill_parent"
             android:layout_height="60dp"
-            android:layout_below="@id/layout_03"
+            android:layout_below="@id/layout_04"
             android:background="#ededed"
             android:orientation="horizontal" >
 
@@ -150,10 +185,10 @@
         </RelativeLayout>
 
         <RelativeLayout
-            android:id="@+id/layout_05"
+            android:id="@+id/layout_06"
             android:layout_width="fill_parent"
             android:layout_height="38dp"
-            android:layout_below="@id/layout_04"
+            android:layout_below="@id/layout_05"
             android:background="#ededed"
             android:orientation="horizontal" >
 
@@ -185,10 +220,10 @@
         </RelativeLayout>
 
         <RelativeLayout
-            android:id="@+id/layout_06"
+            android:id="@+id/layout_07"
             android:layout_width="fill_parent"
             android:layout_height="38dp"
-            android:layout_below="@id/layout_05"
+            android:layout_below="@id/layout_06"
             android:background="#ededed"
             android:orientation="horizontal" >
 
@@ -210,7 +245,7 @@
             android:id="@+id/myorder_layout_button"
             android:layout_width="fill_parent"
             android:layout_height="60dp"
-            android:layout_below="@id/layout_06"
+            android:layout_below="@id/layout_07"
             android:layout_marginTop="70dp"
             android:background="#ffdddddd"
             android:gravity="center_vertical"
