--- a/02_code/android/eOrderMobile/res/layout-xxhdpi/goods_griditem.xml
+++ b/02_code/android/eOrderMobile/res/layout-xxhdpi/goods_griditem.xml
@@ -36,7 +36,7 @@
             android:layout_weight="1"
             android:background="#ffffff"
             android:gravity="left|center_vertical"
-            android:paddingLeft="10dp"
+            android:paddingLeft="2dp"
             android:text="@string/main_griditem_text_name"
             android:textColor="#4d4d4d"
             android:textSize="20dp" />
@@ -48,10 +48,12 @@
             android:layout_weight="1"
             android:background="#ffffff"
             android:gravity="right|center_vertical"
-            android:paddingRight="10dp"
+            android:paddingRight="2dp"
             android:text="@string/main_griditem_text_price"
+            android:singleLine="true" 
+			android:ellipsize="marquee" 
             android:textColor="#fe3c3c"
             android:textSize="20dp" />
-    </LinearLayout>
-
+    </LinearLayout>	
+								
 </RelativeLayout>
