--- a/02_code/web/eorder-dish/src/main/webapp/resources/css/eorder-style.css
+++ b/02_code/web/eorder-dish/src/main/webapp/resources/css/eorder-style.css
@@ -37,6 +37,13 @@ html, body {
 	background-color: #ccc;
 }
 
+.onepage {
+	left: 10px;
+	top: 10px;
+	bottom: 0px; /* 取决于bottom， 如果没有bottom，则设置为0px */
+	/*background-color: #f5f5f5;*/
+}
+
 .panel iframe {
 	width: 100%;
 	height: 100%;
