--- a/02_code/web/eorder-dish/src/main/webapp/resources/css/eorder-style.css
+++ b/02_code/web/eorder-dish/src/main/webapp/resources/css/eorder-style.css
@@ -1,3 +1,9 @@
+* {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+
 html, body {
 	height: 100%;
 	overflow: hidden;
@@ -35,13 +41,6 @@ html, body {
 	top: auto;
 	height: 50px;
 	background-color: #ccc;
-}
-
-.onepage {
-	left: 10px;
-	top: 10px;
-	bottom: 0px; /* 取决于bottom， 如果没有bottom，则设置为0px */
-	/*background-color: #f5f5f5;*/
 }
 
 .panel iframe {
@@ -115,19 +114,6 @@ html {
 	*padding-left: 0px;
 }
 
-.query {
-	float: left;
-	width: 408px;
-	height: 20px;
-	padding: 5px;
-	margin-left: 5px;
-	font-size: 14px;
-	font-weight: bold;
-	color: #F00;
-	font-weight: bold;
-	vertical-align: center;
-}
-
 .operatemessage {
 	float: left;
 	width: 408px;
@@ -142,12 +128,12 @@ html {
 }
 
 .rightinfo {
-	width: 80%;
+	width: 100%;
 }
 
 .twoinput {
 	width: 35px;
-	height: 33px;
+	height: 30px;
 	line-height: 33px;
 	border-top: solid 1px #a7b5bc;
 	border-left: solid 1px #a7b5bc;
@@ -155,4 +141,21 @@ html {
 	border-bottom: solid 1px #ced9df;
 	background: url(../images/inputbg.gif) repeat-x;
 	text-indent: 10px;
+}
+
+.tablePanel {
+	width:70%;
+	float:left;
+}
+
+.msgPanel {
+	width : 25%;
+	margin-right:25px;
+	float: right;
+	padding: 10px 10px;
+	background-color: #eeeeee;
+ 	border: 1px dotted #dddddd;
+  	height: 120px;
+  	color: red;
+  	font-weight: bold;
 }
