--- a/02_code/web/eorder-dish/src/main/webapp/resources/css/style.css
+++ b/02_code/web/eorder-dish/src/main/webapp/resources/css/style.css
@@ -237,7 +237,7 @@ h2 {
 
 .topleft {
 	height: 88px;
-	background: url(../images/topleft.jpg) no-repeat;
+	background: url(../images/topleft.png) no-repeat;
 	float: left;
 	width: 300px;
 }
@@ -249,7 +249,7 @@ h2 {
 
 .topright {
 	height: 88px;
-	background: url(../images/topright.jpg) no-repeat right;
+	background: url(../images/topright.png) no-repeat right;
 	float: right;
 }
 
