--- a/02_code/web/eorder-member/src/main/webapp/resources/css/eorder-style.css
+++ b/02_code/web/eorder-member/src/main/webapp/resources/css/eorder-style.css
@@ -149,13 +149,11 @@ html {
 }
 
 .msgPanel {
-	width : 25%;
-	margin-right:25px;
+	width : 20%;
+	margin-right:55px;
 	float: right;
-	padding: 10px 10px;
-	background-color: #eeeeee;
- 	border: 1px dotted #dddddd;
   	height: 120px;
   	color: red;
   	font-weight: bold;
+  	font-size : 15px
 }
