--- a/02_code/web/eorder-dish/src/main/webapp/resources/css/style.css
+++ b/02_code/web/eorder-dish/src/main/webapp/resources/css/style.css
@@ -337,11 +337,11 @@ h2 {
 
 .user {
 	height: 30px;
-	background: url(../images/ub1.png) repeat-x;
+	/*background: url(../images/ub1.png) repeat-x;*/
 	clear: both;
 	margin-top: 10px;
 	float: right;
-	margin-right: 12px;
+	margin-right: 106px;
 	border-radius: 30px;
 	behavior: url(js/pie.htc);
 	white-space: nowrap;
