--- a/02_code/web/eorder-order/src/main/webapp/resources/css/style.css
+++ b/02_code/web/eorder-order/src/main/webapp/resources/css/style.css
@@ -954,7 +954,7 @@ h2 {
 }
 
 .formtitle {
-	border-bottom: solid 1px #d0dee5;
+	/*border-bottom: solid 1px #d0dee5;*/
 	line-height: 35px;
 	position: relative;
 	height: 35px;
