--- a/02_code/web/eorder-order/src/main/webapp/resources/css/eorder-style.css
+++ b/02_code/web/eorder-order/src/main/webapp/resources/css/eorder-style.css
@@ -159,8 +159,29 @@ html {
 }
 
 .orderItemTablePanel {
-	width: 25%;
+	width: 340px;
 	float: left;
+}
+
+.orderItemTablePanel table {
+	border: solid 1px #cbcbcb;
+	width: 100%;
+	clear: both;
+}
+
+.orderItemTablePanel table th {
+	background: url(../images/th.gif) repeat-x;
+	height: 34px;
+	line-height: 34px;
+	border-bottom: solid 1px #b6cad2;
+	text-indent: 11px;
+	text-align: left;
+}
+
+.orderItemTablePanel table td {
+	line-height: 35px;
+	text-indent: 11px;
+	border-right: dotted 1px #c7c7c7;
 }
 
 .orderItemPanel {
@@ -205,6 +226,9 @@ html {
 	padding: 2px;
 	margin: 5px;
 	display: none;
+	/*overflow: scroll;*/
+	overflow-x: hidden;
+	overflow-y: auto;
 }
 
 .pop_print_content {
@@ -225,11 +249,11 @@ html {
 }
 
 .divgreen {
-	padding: 10px;
-	margin: 10px;
-	width: 96px;
-	height: 96px;
-	line-height: 96px; /* 和height一致，使文字垂直居中*/
+	padding: 5px;
+	margin: 5px;
+	width: 64px;
+	height: 64px;
+	line-height: 64px; /* 和height一致，使文字垂直居中*/
 	overflow: hidden;
 	background-color: #0F0;
 	text-align: center; /* 使文字水平居中*/
@@ -238,11 +262,11 @@ html {
 }
 
 .divred {
-	padding: 10px;
-	margin: 10px;
-	width: 96px;
-	height: 96px;
-	line-height: 96px;
+	padding: 5px;
+	margin: 5px;
+	width: 64px;
+	height: 64px;
+	line-height: 64px;
 	overflow: hidden;
 	background-color: #F00;
 	text-align: center;
